Fix scrollbar style

--- a/src/index.css
+++ b/src/index.css
@@ -31,6 +31,7 @@ body {
 
 *::-webkit-scrollbar {
     width: 12px;
+    height: 12px;
     background: #0000001a;
 }
 
@@ -39,4 +40,7 @@ body {
     border-radius: 8px;
     background-clip: padding-box;
     background-color: #ffffff14;
+}
+::-webkit-scrollbar-corner {
+    background: #0000001a;
 }
